2020-07-01 Franz Holzinger <franz@ttproducts.de>
    * initial creation