@@ -8,7 +8,7 @@ $EM_CONF[$_EXTKEY] = array(
     'title' => 'Quotation for Shop System',
     'description' => 'Export of the current shop basket into an Excel file in the form of a quotation.',
     'category' => 'misc',
-    'version' => '0.1.0',
+    'version' => '0.1.1',
     'state' => 'stable',
     'uploadfolder' => 0,
 	'createDirs' => 'fileadmin/data/quotation',
